fix styles overflows on category mobile

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -567,6 +567,7 @@ input:focus, textarea:focus
 	height 100vh
 	background $primary
 	overflow-y scroll
+	-webkit-overflow-scrolling touch
 	transition(left, 1000ms)
 	z-index 10
 	+below($desktop)
